[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator module for the A-Maze-ing project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["mazegen"]
